# sdlxboxmap

./: CMakeLists.txt  LICENSE  README.md
examples/: dpad.conf  dpad.tpl  sdlxboxmap
examples/OpenXCom/: OpenXCom.tpl
libext/easyloggingpp/: CMakeLists.txt
pics/: controllermap.xcf
src/: CMakeLists.txt  bitext.cpp  bitext.h  evdevjoy.cpp  evdevjoy.h  joymapdb.h  logging.cpp  logging.h  notes.txt  platform.cpp  platform.h  sdlxboxmap.cpp  sdlxboxmap.h  stringext.cpp  stringext.h
